# cerebrain

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
cerebra/: __init__.py  __main__.py
cerebra/api/: __init__.py  routes.py  server.py
cerebra/cli/: commands.py
cerebra/config/: __init__.py  default_brain.yaml  llm_providers.yaml
cerebra/core/: __init__.py  brain_agent.py  consciousness.py  inspiration_engine.py  memory_system.py  self_skills.py
cerebra/scripts/: __init__.py  brain_diagnostics.py  setup_cerebra.py
cerebra/ui/: brain_terminal_managers.py  chat_interface.py  metrics_dashboard.py  terminal_brain.py  terminal_buffer.py
cerebra/utils/: config_loader.py  persistence.py
cerebrain/: __init__.py  __main__.py
cerebrain/api/: routes.py  server.py
cerebrain/cli/: commands.py
cerebrain/config/: __init__.py  llm_providers.yaml  model_templates.py
cerebrain/core/: __init__.py  brain_agent.py  consciousness.py  emotional_self.py  inspiration_engine.py  logical_self.py  self_skills.py
cerebrain/scripts/: brain_diagnostics.py  setup_cerebraai.py  setup_cerebrain.py
cerebrain/ui/: brain_terminal_managers.py  metrics_dashboard.py  terminal_brain.py
cerebrain/utils/: config_loader.py  persistence.py  randomness.py
docs/: PROPOSAL.md  PUBLISHING.md
