[project]
name = "cerebrain"
version = "0.3.4"

description = "Brain matrix CLI: one integrated mind (emotional, logical, memory, inspiration, consciousness). SOUL, MEMORY, USER, TOOLS. Not a conventional agent framework."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# Empty so wheel METADATA has no License-File field (avoids twine "unrecognized field" on older tools)
license-files = []
authors = [{ name = "Cerebrain contributors" }]
keywords = ["ai", "brain", "brain-matrix", "cli", "terminal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
chromadb = [
    "chromadb>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/shuurai/cerebrain"
Repository = "https://github.com/shuurai/cerebrain"
Documentation = "https://github.com/shuurai/cerebrain#readme"

[project.scripts]
cerebrain = "cerebrain.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cerebrain"]

[tool.hatch.build.targets.wheel.sources]
"cerebrain" = "cerebrain"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
